--- a/package.json
+++ b/package.json
@@ -3,12 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.12.3",
-    "@material-ui/data-grid": "^4.0.0-alpha.37",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.2",
+    "bootstrap": "^5.1.1",
     "instant-table": "^3.0.0",
     "ka-table": "^7.1.3",
     "react": "^17.0.2",
@@ -16,6 +15,7 @@
     "react-google-login": "^5.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "reactstrap": "^8.10.0",
     "styled-components": "^5.3.0",
     "web-vitals": "^1.0.1"
   },
